# Agents-management

./: .gitignore  README-AXIOS-SETUP.md  README.md  Taller3Árboles.ipynb
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  simple_main.py
backend/src/application/commands/: __init__.py  createAgent.py  deleteAgent.py  deleteDocument.py  updateAgent.py  uploadDocument.py
backend/src/application/dto/: agentDto.py  documentDto.py
backend/src/application/queries/: __init__.py  getAgentDetail.py  getDocument.py  listAgents.py  listDocuments.py
backend/src/application/services/: documentValidationService.py
backend/src/domain/entities/: agent.py  document.py
backend/src/domain/exceptions/: businessExceptions.py  domainExceptions.py
backend/src/domain/ports/: __init__.py
backend/src/domain/ports/repositories/: __init__.py  agentRepository.py  documentRepository.py
backend/src/domain/ports/services/: __init__.py  fileStorage.py
backend/src/domain/value_objects/: agentId.py  documentType.py
backend/src/infrastructure/adapters/persistence/mongodb/: connection.py
backend/src/infrastructure/adapters/persistence/mongodb/repositories/: mongoAgentRepository.py  mongoDocumentRepository.py
backend/src/infrastructure/adapters/storage/: s3FileStorage.py
backend/src/infrastructure/api/: dependencies.py
backend/src/infrastructure/api/middleware/: databaseErrorHandler.py  errorHandler.py
backend/src/infrastructure/api/routers/: agents.py  documents.py
backend/src/infrastructure/api/schemas/: agentSchemas.py
backend/src/infrastructure/config/: container.py  settings.py
backend/src/shared/utils/: formatter.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_agents_api.py
backend/tests/unit/application/: test_create_agent_command.py  test_get_document_query.py  test_upload_document_command.py
backend/tests/unit/domain/: test_agent_entity.py  test_document_entity.py  test_value_objects.py
backend/tests/unit/infrastructure/: test_mongo_agent_repository.py
frontend/: .gitignore  README-FRONTEND.md  UI-IMPLEMENTATION.md  install-axios.sh  package-lock.json  (+1 more)
(+27 files in other folders)
