# pyproject.toml
[project]
name = "ai-agents-backend"
version = "1.0.0"
description = "AI Agents Manager Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "motor==3.3.2",
    "boto3==1.34.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.26.0",
    "ruff==0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# .env.example
APP_NAME=AI_Agents_Manager
DEBUG=True
HOST=0.0.0.0
PORT=8000

# MongoDB
MONGODB_URL=mongodb://localhost:27017
MONGODB_DB_NAME=ai_agents_db

# AWS S3
AWS_ACCESS_KEY_ID=your_key
AWS_SECRET_ACCESS_KEY=your_secret
AWS_S3_BUCKET_NAME=ai-agents-docs
AWS_S3_REGION=us-east-1

# File Upload
MAX_FILE_SIZE_MB=10
ALLOWED_EXTENSIONS=pdf,docx,xlsx,pptx