# pyproject.toml
[project]
name = "ai-agents-backend"
version = "1.0.0"
description = "AI Agents Manager Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "motor==3.3.2",
    "boto3==1.34.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.26.0",
    "ruff==0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Pruebas unitarias rápidas",
    "integration: Pruebas de integración",
    "api: Pruebas de endpoints API"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]